# zorro

./: .gitignore  Cargo.toml  README.md  SPEC.md  rust-toolchain.toml
.github/workflows/: release.yml
crates/zorro/: Cargo.toml
crates/zorro-core/: Cargo.toml
crates/zorro-core/src/: ai.rs  conflict.rs  diff.rs  git.rs  lib.rs  session.rs  syntax.rs  update.rs  validate.rs
crates/zorro-core/tests/: ai.rs  conflict_engine.rs  diff.rs  git_integration.rs  syntax.rs  update.rs  validate.rs
crates/zorro/assets/: Zorro.icns
crates/zorro/src/: app.rs  editor.rs  main.rs  theme.rs
scripts/: bundle.sh  demo.sh  make-icon.sh
