[workspace]
resolver = "2"
members = ["crates/zorro-core", "crates/zorro"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["Zorro contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/baboons/zorro"

[workspace.dependencies]
zorro-core = { path = "crates/zorro-core" }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
